Centralized style, smaller font, max width set and content added. Intallation WIN/Mac to complete, getting started advanced to be compelted, imiation learning

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ unsafe= true
   author = "Mathieu Cornic"
   showVisitedLinks = true
   disableBreadcrumb = false
-  disableNextPrev = false
+  disableNextPrev = true
   disableLandingPageButton = false
   disableMermaid = false
   customMermaidURL = "https://unpkg.com/mermaid@8.8.0/dist/mermaid.min.js"
