--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/pages/hugo:0.91.2+extended
+image: registry.gitlab.com/pages/hugo:0.91.2+
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
