--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://artificialtwin.gitlab.io/alphaMale/diambra/diambraArenaDocs/"
 languageCode = "en-US"
 defaultContentLanguage = "en"
 
