--- a/config.toml
+++ b/config.toml
@@ -13,8 +13,8 @@ unsafe= true
 
 [params]
   #editURL = "https://github.com/matcornic/hugo-theme-learn/edit/master/exampleSite/content/"
-  description = "DIAMBRA Arena documentation"
-  author = "Mathieu Cornic"
+  description = "DIAMBRA Arena Documentation"
+  author = "Alessandro Palmas"
   showVisitedLinks = true
   disableBreadcrumb = false
   disableNextPrev = true
@@ -39,7 +39,7 @@ landingPageName = "<i class='fas fa-home'></i> Home"
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
 identifier = "ds"
-url = "https://github.com/diambra/DIAMBRAenvironment"
+url = "https://github.com/diambra/diambraArena"
 weight = 10
 
 [[Languages.en.menu.shortcuts]]
