--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ weight = 14
 
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-youtube'></i> YouTube"
-url = "https://www.youtube.com/channel/UCMlHRxN3KtLIj1N8mKvmXDw/videos"
+url = "https://www.youtube.com/c/diambra_ai"
 weight = 21
 
 [[Languages.en.menu.shortcuts]]
