--- a/config.toml
+++ b/config.toml
@@ -52,30 +52,30 @@ url = "https://github.com/diambra/diambraArena"
 weight = 11
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fab fa-fw fa-docker'></i> Docker"
-identifier = "docker"
-url = "https://hub.docker.com/r/diambra/diambra-arena"
+name = "<i class='fab fa-discord'></i> Discord"
+url = "https://discord.gg/tFDS2UN5sv"
 weight = 12
 
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-twitch'></i> Twitch"
 url = "https://www.twitch.tv/diambra_ai"
-weight = 15
+weight = 13
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fab fa-discord'></i> Discord"
-url = "https://discord.gg/tFDS2UN5sv"
+name = "<i class='fab fa-linkedin'></i> Linkedin"
+url = "https://www.linkedin.com/company/diambra"
 weight = 14
 
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-youtube'></i> YouTube"
 url = "https://www.youtube.com/c/diambra_ai"
-weight = 21
+weight = 15
 
 [[Languages.en.menu.shortcuts]]
-name = "<i class='fab fa-linkedin'></i> Linkedin"
-url = "https://www.linkedin.com/company/diambra"
-weight = 12
+name = "<i class='fab fa-fw fa-twitter'></i> Twitter"
+identifier = "twitter"
+url = "https://twitter.com/diambra_ai"
+weight = 16
 
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fas fa-heart'></i> Support"
