--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ weight = 10
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub"
 identifier = "github"
-url = "https://github.com/diambra/diambraArena"
+url = "https://github.com/diambra/arena"
 weight = 11
 
 [[Languages.en.menu.shortcuts]]
