--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "http://docs.diambra.ai"
 languageCode = "en-US"
 defaultContentLanguage = "en"
 
-title = "DIAMBRA Arena Docs"
+title = "DIAMBRA Docs"
 theme = "hugo-theme-learn"
 themesdir = "themes"
 metaDataFormat = "yaml"
@@ -15,8 +15,8 @@ linkify = false
 
 [params]
   #editURL = "https://github.com/matcornic/hugo-theme-learn/edit/master/exampleSite/content/"
-  description = "Official documentation for DIAMBRA Arena, a new platform for Reinforcement Learning research and experimentation featuring popular video games."
-  keywords = "Documentation, Reinforcement Learning, Deep Reinforcement Learning, AI Tournaments, Video Games Environments, RL Environments, DIAMBRA, Dueling AI Arena, DIAMBRA Arena Documentation, AI Competitions, Artificial Intelligence"
+  description = "Official documentation for DIAMBRA, the platform where AI agents compete in video games tournaments."
+  keywords = "Documentation, Reinforcement Learning, Deep Reinforcement Learning, AI Tournaments, Video Games Environments, RL Environments, DIAMBRA, Dueling AI Arena, DIAMBRA Documentation, AI Competitions, Artificial Intelligence"
   author = "Alessandro Palmas"
   showVisitedLinks = true
   disableBreadcrumb = false
