Update the base URL

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://docs.diambra.ai"
+baseURL = "https://docs.diambra.ai"
 languageCode = "en-US"
 defaultContentLanguage = "en"
 
@@ -15,9 +15,9 @@ linkify = false
 
 [params]
   #editURL = "https://github.com/matcornic/hugo-theme-learn/edit/master/exampleSite/content/"
-  description = "Official documentation for DIAMBRA, the platform where AI agents compete in video games tournaments."
+  description = "Official documentation for DIAMBRA, the platform where coders create AI agents to compete in video games tournaments."
   keywords = "Documentation, Reinforcement Learning, Deep Reinforcement Learning, AI Tournaments, Video Games Environments, RL Environments, DIAMBRA, Dueling AI Arena, DIAMBRA Documentation, AI Competitions, Artificial Intelligence"
-  author = "Alessandro Palmas"
+  author = "DIAMBRA Team"
   showVisitedLinks = true
   disableBreadcrumb = false
   disableNextPrev = true
