Add repository dispatch event to allow build from arena and agents

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main  # Set a branch to deploy
   pull_request:
+  repository_dispatch:
+    types: [rebuild-deploy]
 
 jobs:
   build:
@@ -14,7 +16,7 @@ jobs:
     needs: [build]
     steps:
       - uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || github.event_name == 'repository_dispatch'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
