Add version selector

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,12 @@ jobs:
         if: github.event_name == 'push' && github.ref_name != 'main'
         
       - name: Build
-        run: hugo --minify --baseURL https://docs.diambra.ai/${{ github.ref_name == 'main' && '' || steps.get-path.outputs.path }}
+        run: |
+          cat <<EOF > data/versions.yaml
+          versions:
+          $(git branch --list 'release-*'|sed 's/.*release-/- /')
+          EOF
+          hugo --minify --baseURL https://docs.diambra.ai/${{ github.ref_name == 'main' && '' || steps.get-path.outputs.path }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
